--- a/IngresoPedidos/Properties/Resources.resx
+++ b/IngresoPedidos/Properties/Resources.resx
@@ -175,4 +175,58 @@
   <data name="_256__1_" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\256 (1).ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="_64" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\64.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_128__4_" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\128 (4).ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_128__5_" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\128 (5).ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_128__6_" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\128 (6).ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_128__7_" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\128 (7).ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_128__8_" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\128 (8).ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_128__9_" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\128 (9).ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_48" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\48.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_48__1_" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\48 (1).ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_48__2_" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\48 (2).ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_128__10_" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\128 (10).ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_128__11_" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\128 (11).ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_48__3_" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\48 (3).ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_48__4_" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\48 (4).ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_48__5_" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\48 (5).ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="sello_entregado_2_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\sello-entregado-2-1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="rubberstamp256" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\rubberstamp256.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="rubberstampwithinkpad256" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\rubberstampwithinkpad256.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
