--- a/IngresoPedidos/Properties/Resources.resx
+++ b/IngresoPedidos/Properties/Resources.resx
@@ -232,4 +232,28 @@
   <data name="_20055" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\20055.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="_128__12_" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\128 (12).ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_128__13_" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\128 (13).ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_128__14_" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\128 (14).ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_128__15_" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\128 (15).ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_128__16_" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\128 (16).ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_128__17_" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\128 (17).ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_80" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\80.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_80__1_" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\80 (1).ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
