--- a/IngresoPedidos/Properties/Resources.resx
+++ b/IngresoPedidos/Properties/Resources.resx
@@ -256,4 +256,7 @@
   <data name="_80__1_" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\80 (1).ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="_128__511_" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\128 (511).ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
